--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - phpfpm
       - db
     volumes:
-      - ./../../projects/magento2-new:/var/www
+      - ./magento2-new:/var/www
     ports:
       - 8000:80
 
@@ -18,7 +18,7 @@ services:
     links:
       - db
     volumes:
-      - ./../../projects/magento2-new:/var/www
+      - ./magento2-new:/var/www
 
   db:
     image: percona:5.7
@@ -34,7 +34,7 @@ services:
     links:
       - db
     volumes:
-      - ./../../projects/magento2-new:/var/www
+      - ./magento2-new:/var/www
     env_file: env/setup.env
 
 volumes:
