--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - phpfpm
       - db
     volumes:
-      - ./magento2-new:/var/www
+      - ./magento2:/var/www
     ports:
       - 8000:80
 
@@ -20,7 +20,7 @@ services:
     links:
       - db
     volumes:
-      - ./magento2-new:/var/www
+      - ./magento2:/var/www
 
   db:
     image: percona:5.7
@@ -36,7 +36,7 @@ services:
     links:
       - db
     volumes:
-      - ./magento2-new:/var/www
+      - ./magento2:/var/www
     env_file: env/setup.env
 
 volumes:
